--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
 <header>
-	<div class='prueba1'>
-		<div class="sobre" data-aos="fade-up" data-aos-duration="1500">
+	<div class='prueba1  col-sm-12'>
+		<div class="sobre container" data-aos="fade-up" data-aos-duration="1500">
 			
 			<H1 class="letras nombre" > Ralph Bennett</H1>
 			<p  class="letras descripcion"> Urban city pictures from a New York photographer, </p>
