--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <header>
-	<div class='prueba1  col-sm-12'>
+	<div class='prueba1  col-12'>
 		<div class="sobre container" data-aos="fade-up" data-aos-duration="1500">
 			
 			<H1 class="letras nombre" > Ralph Bennett</H1>
