--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 				  <!--	Fin	-->
 				<div class="container-fluid flex">
 				
-						<div class="col-sm-6 contenedorimg">
+						<div class=" col contenedorimg">
 							<img class="imgtrabajo" src="https://img.freepik.com/foto-gratis/3d-render-paisaje-arbol-contra-cielo-nocturno_1048-5698.jpg?w=2000" alt="">
 						</div>
-						<div class="col-sm-6 contenedorimg">
-							<img class="imgtrabajo lp" src="https://img.freepik.com/foto-gratis/3d-render-paisaje-arbol-contra-cielo-nocturno_1048-5698.jpg?w=2000" alt="">
+						<div class=" col contenedorimg">
+							<img class="imgtrabajo " src="https://img.freepik.com/foto-gratis/3d-render-paisaje-arbol-contra-cielo-nocturno_1048-5698.jpg?w=2000" alt="">
 
 						</div>
 
