--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
 					  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
 					</div>
 					<div class="carousel-inner">
-					  <div class="carousel-item active carousel item">
-						<img src="https://img.freepik.com/vector-premium/paisaje-nocturno-luna-llena-grandes-arboles_104785-151.jpg" class="d-block w-100" alt="...">
+					  <div class="carousel-item active carousel item centrado">
+						<img class="centrado" src="https://pbs.twimg.com/media/Fj3fLheVQAAQ22l?format=jpg&name=large" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 						  <h5>First slide label</h5>
 						  <p>Some representative placeholder content for the first slide.</p>
 						</div>
 					  </div>
-					  <div class="carousel-item carousel item">
-						<img src="https://img.freepik.com/foto-gratis/3d-render-paisaje-arbol-contra-cielo-nocturno_1048-5698.jpg?w=2000" class="d-block w-100" alt="...">
+					  <div class="carousel-item carousel item ">
+						<img class="centrado" src="https://pbs.twimg.com/media/FlsFAo1XoAAGxMZ?format=jpg&name=large" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 						  <h5>Second slide label</h5>
 						  <p>Some representative placeholder content for the second slide.</p>
 						</div>
 					  </div>
-					  <div class="carousel-item carousel item">
-						<img src="https://img.freepik.com/foto-gratis/3d-render-paisaje-arbol-contra-cielo-nocturno_1048-5698.jpg?w=2000" class="d-block w-100" alt="...">
+					  <div class="carousel-item carousel item ">
+						<img class="centrado " src="https://pbs.twimg.com/media/Flv3a8jWIAMmbO0?format=jpg&name=large " class="d-block w-100" alt="..." >
 						<div class="carousel-caption d-none d-md-block">
 						  <h5>Third slide label</h5>
 						  <p>Some representative placeholder content for the third slide.</p>
