--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
 					</div>
 					<div class="carousel-inner">
 					  <div class="carousel-item active carousel item centrado">
-						<img class="centrado" src="https://pbs.twimg.com/media/Fj3fLheVQAAQ22l?format=jpg&name=large" class="d-block w-100" alt="...">
+						<img class="centrado" src="https://picstatio.com/download/1920x1080/7f4161/singapore-skyscrapers-buildings-night-city.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
-						  <h5>First slide label</h5>
-						  <p>Some representative placeholder content for the first slide.</p>
+						  <h5>Singapore</h5>
+						  
 						</div>
 					  </div>
 					  <div class="carousel-item carousel item ">
-						<img class="centrado" src="https://pbs.twimg.com/media/FlsFAo1XoAAGxMZ?format=jpg&name=large" class="d-block w-100" alt="...">
+						<img class="centrado" src="https://picstatio.com/download/1920x1080/18640f/buildings-San-Diego-city-night-lights-5k.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
-						  <h5>Second slide label</h5>
-						  <p>Some representative placeholder content for the second slide.</p>
+						  <h5>San Diego</h5>
+						  
 						</div>
 					  </div>
 					  <div class="carousel-item carousel item ">
-						<img class="centrado " src="https://pbs.twimg.com/media/Flv3a8jWIAMmbO0?format=jpg&name=large " class="d-block w-100" alt="..." >
+						<img class="centrado " src="https://picstatio.com/download/1920x1080/576722/milan-city-river-light-4k.jpg " class="d-block w-100" alt="..." >
 						<div class="carousel-caption d-none d-md-block">
-						  <h5>Third slide label</h5>
-						  <p>Some representative placeholder content for the third slide.</p>
+						  <h5>Milan</h5>
+
 						</div>
 					  </div>
 					</div>
