--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		
 			
 			
-				<div class="row textcentrado letras bodoni jobsA]=">
+				<div class="row textcentrado letras bodoni jobs">
 					
 					<h2>My Jobs!</h2>
 
@@ -108,7 +108,7 @@
 
 				<!-- Carrucel -->
 
-				<div id="carouselExampleCaptions padding" class="carousel slide" data-bs-ride="carousel">
+				<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
 					  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 					  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -153,7 +153,7 @@
 						<div class="col-md-3 col-sm-6">
 							<div class="contenedorimg">
 								<div class="card" style="height: 100%  ">
-										<img class="fit" src="https://picstatio.com/download/800x600/9273f3/Eiffel-Tower-night-city-paris.jpg" class="card-img-top" alt="...">
+										<img src="https://picstatio.com/download/800x600/9273f3/Eiffel-Tower-night-city-paris.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 										</div>
@@ -193,7 +193,7 @@
 
 						<div class="col-md-3  col-sm-6  ">
 							<div class="contenedorimg">
-								<div class="card " style="width: 100% "/>
+								<div class="card fondo" style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/065ca0/illuminated-sky-cityscape.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
