--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6">
 							<div class="contenedorimg">
-								<div class="card" style="height: 100%  ">
+								<div class="card text-white bg-dark" style="height: 100%  ">
 										<img src="https://picstatio.com/download/800x600/9273f3/Eiffel-Tower-night-city-paris.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -166,7 +166,7 @@
 
 						<div class="col-md-3 col-sm-6">
 							<div class="contenedorimg">
-								<div class="card" style="width: 100% "/>
+								<div class="card text-white bg-dark" style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/d1ff91/night-city-aerial-view.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -180,7 +180,7 @@
 
 						<div class="col-md-3  col-sm-6  ">
 							<div class="contenedorimg">
-								<div class="card " style="width: 100% "/>
+								<div class="card text-white bg-dark" style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/b5d383/new-york-skyscrapers-night-city.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -193,7 +193,7 @@
 
 						<div class="col-md-3  col-sm-6  ">
 							<div class="contenedorimg">
-								<div class="card fondo" style="width: 100% "/>
+								<div class="card text-white bg-dark border-dark" style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/065ca0/illuminated-sky-cityscape.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
