--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Acme&family=Libre+Bodoni:ital@1&family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
-		
+		<!--Icono-->
+		<link rel="icon" href="R..B.ico">
 		<title>Proyecto intrgrador</title>
 </head>
 <body>
@@ -78,7 +79,7 @@
 	
 		<div class="box3">
 			<div >
-				<div class="centrado my-3 mx-4">
+				<div class="centrado my-3 mx-4" data-aos="zoom-in">
 					<img class="Fotografo" src="https://images.cm.archant.co.uk/resource/image/8616470/landscape_ratio16x9/1920/1080/f8224978b1cb2fc3f6ded7165545d3eb/gy/slb-2022-zak-walters-5.jpg" alt="">
 				</div>	
 
@@ -151,7 +152,7 @@
 				<div class="container-fluid ">
 					<div class="row">
 						<div class="col-md-3 col-sm-6">
-							<div class="contenedorimg">
+							<div class="contenedorimg" data-aos="fade-down" data-aos-duration="500">
 								<div class="card text-white bg-dark" style="height: 100%  ">
 										<img src="https://picstatio.com/download/800x600/9273f3/Eiffel-Tower-night-city-paris.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
@@ -165,8 +166,8 @@
 
 
 						<div class="col-md-3 col-sm-6">
-							<div class="contenedorimg">
-								<div class="card text-white bg-dark" style="width: 100% "/>
+							<div class="contenedorimg"data-aos="fade-up" data-aos-duration="500">
+								<div class="card text-white bg-dark " style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/d1ff91/night-city-aerial-view.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 											<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -178,8 +179,8 @@
 						</div>
 
 
-						<div class="col-md-3  col-sm-6  ">
-							<div class="contenedorimg">
+						<div class="col-md-3  col-sm-6 ">
+							<div class="contenedorimg" data-aos="fade-down" data-aos-duration="500" >
 								<div class="card text-white bg-dark" style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/b5d383/new-york-skyscrapers-night-city.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
@@ -192,7 +193,7 @@
 						</div>
 
 						<div class="col-md-3  col-sm-6  ">
-							<div class="contenedorimg">
+							<div class="contenedorimg" data-aos="fade-up" data-aos-duration="500">
 								<div class="card text-white bg-dark border-dark" style="width: 100% "/>
 										<img src="https://picstatio.com/download/800x600/065ca0/illuminated-sky-cityscape.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
