--- a/index.html
+++ b/index.html
@@ -401,17 +401,17 @@
 								<ul>
 									<li>Adobe Photoshop
 										<div class="progress">
-											<div class="progress-bar progress-bar-striped  bg-success" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">80%</div>
+											<div class="progress-bar   bg-success" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">80%</div>
 										</div>
 									</li>
 									<li>Adobe Lightroom
 										<div class="progress">
-											<div class="progress-bar progress-bar-striped  bg-success" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">90%</div>
+											<div class="progress-bar   bg-success" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">90%</div>
 										</div>
 									</li>
 									<li>Adobe Illustrator
 										<div class="progress">
-											<div class="progress-bar progress-bar-striped  bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+											<div class="progress-bar   bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
 										</div>
 									</li>
 								</ul>
