--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 								<h5>Suscribe</h5>
 								<span class="form-text"> In case you want to receive my updates	 </span>
 								<br>
-								<form action=""  method="post">
+								<form action=""  method="get">
 									<div class="mb-3">
 										<label for="Nombre" class="form-label">Name</label>
 										<input type="txt" class="form-control" id="Nombre">
