--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 	
 </header>
 <div class="box2">
-	<nav class="navbar navbar-expand-md  bar">
+	<nav class="navbar navbar-expand-md  bar" aria-current="page">
 	<div class="container-fluid">
 			<span class="correccion">
-			<a class="navbar-brand link-light camara" href="#home">
+			<a class="navbar-brand link-light camara" href="#home" >
 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera-fill" viewBox="0 0 16 16">
 					<path d="M10.5 8.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
 					<path d="M2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2zm.5 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm9 2.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0z"/>
@@ -57,14 +57,14 @@
 				</div>
 			</span>
 		</button>
-			<div class="collapse navbar-collapse selector" id="navbarNavAltMarkup">
-				<div class="navbar-nav">
-					<a class="nav-link link-light pad" href="#sobremi"><strong>About me</strong> </a>
-					<a class="nav-link link-light pad" href="#jobs"><strong>My jobs</strong></a>
-					<a class="nav-link link-light pad" href="#cv"><strong>CV</strong></a>
-					<a class="nav-link link-light pad" href="#contact"><strong>Contact</strong></a>
-				</div>
-			</div>
+			<show class="collapse navbar-collapse selector" id="navbarNavAltMarkup" id="hideonclick">
+				<links class="navbar-nav">
+					<a  class="nav-link link-light pad" href="#sobremi"><strong>About me</strong> </a>
+					<a  class="nav-link link-light pad" href="#jobs"><strong>My jobs</strong></a>
+					<a  class="nav-link link-light pad" href="#cv"><strong>CV</strong></a>
+					<a id="link" class="nav-link link-light pad" href="#contact"><strong>Contact</strong></a>
+				</links>
+			</show>
 		</div>
 	</nav>
 </div>
@@ -95,7 +95,7 @@
 							<a class="nav-link link-light pad" href="#sobremi"><strong>About me</strong> </a>
 							<a class="nav-link link-light pad" href="#jobs"><strong>My jobs</strong></a>
 							<a class="nav-link link-light pad" href="#cv"><strong>CV</strong></a>
-							<a class="nav-link link-light pad" href="#contact"><strong>Contact</strong></a>
+							<a id="link" class="nav-link link-light pad" href="#contact"><strong>Contact</strong></a>
 						</div>
 					</div>
 				</div>
