--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Acme&family=Libre+Bodoni:ital@1&family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
 		<!--Icono-->
-		<link rel="icon" href="R..B.ico">
+		<link rel="icon" href="Assets/R..B.ico">
 		<title>Proyecto intrgrador</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
 			
 		</div>
 			<div id='je'>
-				<video src="Main-Video.mp4" autoplay  loop class="Main-Video" muted  type="video/mp4" loop  ></video>
+				<video src="Assets/Main-Video.mp4" autoplay  loop class="Main-Video" muted  type="video/mp4" loop  ></video>
 			</div id='je'>
 		
 		<div class="Main"></div>
